erDiagram

    USERS {
        INT id PK
        VARCHAR full_name
        VARCHAR email
        VARCHAR mobile
        VARCHAR password
        INT role_id FK
        BOOLEAN active
        DATETIME created_at
        DATETIME updated_at
    }

    ROLES {
        INT id PK
        VARCHAR role_name
    }

    STATES {
        INT id PK
        VARCHAR state_name
    }

    CATEGORIES {
        INT id PK
        VARCHAR category_name
    }

    OCCUPATIONS {
        INT id PK
        VARCHAR occupation_name
    }

    SCHEMES {
        INT id PK
        VARCHAR scheme_name
        INT min_age
        INT max_age
        DOUBLE max_income
        INT category_id FK
        VARCHAR gender
        INT state_id FK
        INT occupation_id FK
        BOOLEAN disability_required
        BOOLEAN minority_required
        TEXT description
        BOOLEAN active
        DATETIME created_at
    }

    SCHEME_DETAILS {
        INT id PK
        INT scheme_id FK
        TEXT eligibility
        TEXT benefits
        TEXT documents_required
        TEXT application_process
        VARCHAR official_website
        VARCHAR helpline_number
    }

    APPLICATION_STATUS {
        INT id PK
        VARCHAR status_name
    }

    APPLICATIONS {
        INT id PK
        INT user_id FK
        INT scheme_id FK
        INT status_id FK
        INT assigned_officer_id FK
        TEXT remarks
        TEXT application_data
        DATETIME submitted_at
        DATETIME updated_at
    }

    ELIGIBILITY_HISTORY {
        INT id PK
        INT user_id FK
        INT scheme_id FK
        INT state_id FK
        INT category_id FK
        INT occupation_id FK
        INT age
        VARCHAR gender
        DOUBLE annual_income
        BOOLEAN disability
        BOOLEAN minority
        DOUBLE eligibility_score
        VARCHAR eligibility_status
        DATETIME checked_at
    }

    ROLES ||--o{ USERS : has
    USERS ||--o{ APPLICATIONS : submits
    USERS ||--o{ APPLICATIONS : reviews
    USERS ||--o{ ELIGIBILITY_HISTORY : checks

    STATES ||--o{ SCHEMES : belongs_to
    CATEGORIES ||--o{ SCHEMES : applies_to
    OCCUPATIONS ||--o{ SCHEMES : applies_to

    SCHEMES ||--|| SCHEME_DETAILS : has
    SCHEMES ||--o{ APPLICATIONS : receives
    SCHEMES ||--o{ ELIGIBILITY_HISTORY : evaluated_for

    APPLICATION_STATUS ||--o{ APPLICATIONS : defines
